--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 		<module>edward-management</module>
 		<module>edward-rest-client</module>
 		<module>edward-shell-client</module>
+		<module>edward-charles</module>
 	</modules>
 	<build>
 		<plugins>
