--- a/edward-charles/pom.xml
+++ b/edward-charles/pom.xml
@@ -3,26 +3,28 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<artifactId>edward-parent</artifactId>
-		<groupId>pl.joegreen.edward</groupId>
-		<version>1.0-SNAPSHOT</version>
-	</parent>
 
-	<name>edward-charles</name>
-	<artifactId>edward-charles</artifactId>
+	<name>charles</name>
+	<artifactId>charles</artifactId>
+	<groupId>pl.joegreen.charles</groupId>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
+	<repositories>
+		<repository>
+			 <id>releases@bachor-joegreen</id>
+			 <url>http://bachor.joegreen.pl:8081/nexus/content/repositories/releases/</url>
+		</repository>
+		<repository>
+			<id>snapshots@bachor-joegreen</id>
+			 <url>http://bachor.joegreen.pl:8081/nexus/content/repositories/snapshots/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>edward-core</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>pl.joegreen.edward</groupId>
 			<artifactId>edward-rest-client</artifactId>
-			<version>${project.version}</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
