--- a/edward-communication/pom.xml
+++ b/edward-communication/pom.xml
@@ -90,9 +90,19 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.6</version>
+				 <configuration>
+				  <webResources>
+					<resource>
+					  <directory>src/main/webapp/</directory>
+					  <includes>
+						<include>resources/**/*.html</include>
+					  </includes>
+					  <filtering>true</filtering>
+					</resource>
+				  </webResources>
+				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
