--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
 		<org.springframework.version>4.1.0.RELEASE</org.springframework.version>
 		<spring.security.version>3.2.5.RELEASE</spring.security.version>
+		<maven-release-plugin.version>2.5.1</maven-release-plugin.version>
 	</properties>
 
 	<groupId>pl.joegreen.edward</groupId>
@@ -82,6 +83,17 @@
 					<compilerArgument>-Werror</compilerArgument>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>${maven-release-plugin.version}</version>
+				<configuration>
+					<arguments>-Dmaven.test.skip=true</arguments>
+					<pushChanges>false</pushChanges>
+					<tagNameFormat>@{project.version}</tagNameFormat>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
 		</plugins>
