--- a/edward-rest-client/pom.xml
+++ b/edward-rest-client/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>edward-parent</artifactId>
 		<groupId>pl.joegreen.edward</groupId>
-		<version>0.1</version>
+		<version>0.2-SNAPSHOT</version>
 	</parent>
 
 	<name>edward-rest-client</name>
