--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,14 @@
 
 	<groupId>pl.joegreen.edward</groupId>
 	<artifactId>edward-parent</artifactId>
-	<version>0.1</version>
+	<version>0.2-SNAPSHOT</version>
 
 
 	<name>edward-parent</name>
 	<packaging>pom</packaging>
 	<scm>
 		<developerConnection>scm:git:local:.</developerConnection>
-	  <tag>0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<repositories>
 		<repository>
