--- a/edward-persistence/pom.xml
+++ b/edward-persistence/pom.xml
@@ -1,12 +1,10 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<artifactId>edward-parent</artifactId>
 		<groupId>pl.joegreen.edward</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<version>0.1</version>
 	</parent>
 
 	<name>edward-persistence</name>
@@ -121,7 +119,7 @@
 						<database>
 							<name>org.jooq.util.h2.H2Database</name>
 							<includes>.*</includes>
-							<excludes></excludes>
+							<excludes />
 							<inputSchema>PUBLIC</inputSchema>
 						</database>
 						<target>
