Creating zip assembly in edward-communication.

--- a/edward-communication/pom.xml
+++ b/edward-communication/pom.xml
@@ -109,7 +109,27 @@
 					<scanIntervalSeconds>2</scanIntervalSeconds>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/assembly/distribution-descriptor.xml</descriptor>
+					</descriptors>
+					<finalName>edward-${project.version}</finalName>
+				</configuration>
+				<executions>
+					<execution>
+						<id>create-distribution-zip</id>
+						<!-- this is used for inheritance merges -->
+						<phase>package</phase>
+						<!-- append to the packaging phase. -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 
 	</build>
