--- a/edward-core/pom.xml
+++ b/edward-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>edward-parent</artifactId>
 		<groupId>pl.joegreen.edward</groupId>
-		<version>0.2-SNAPSHOT</version>
+		<version>0.2</version>
 	</parent>
 
 	<name>edward-core</name>
