Refactor for future tests.
- Extracted PersistenceContextConfig from SpringServletContextConfig so that it can be used
in pure database tests that don't need web servlet configuration at all.
- Created BaseDaoTest that can be base for future dao tests (it creates test database
and configures transactions).
- Created TaskDaoTest and moved one method from InternalRestControllerIntegrationTest there.
- Moved ModelFixtures to non-test directory to enable sharing it between maven modules.
Other solutions to that problem seemed too complicated for now.

--- a/edward-communication/src/main/webapp/WEB-INF/web.xml
+++ b/edward-communication/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>pl.joegreen.edward.communication.configuration.SpringServletContextConfig,pl.joegreen.edward.communication.configuration.ProductionDataSourceConfig,pl.joegreen.edward.communication.configuration.security.SpringSecurityContextConfig</param-value>
+		<param-value>pl.joegreen.edward.communication.configuration.SpringServletContextConfig,pl.joegreen.edward.persistence.configuration.PersistenceContextConfiguration,pl.joegreen.edward.persistence.configuration.ProductionDataSourceConfig,pl.joegreen.edward.communication.configuration.security.SpringSecurityContextConfig</param-value>
 	</context-param>
 
 	<listener>
