--- a/edward-persistence/pom.xml
+++ b/edward-persistence/pom.xml
@@ -65,6 +65,7 @@
 				<driver>org.h2.Driver</driver>
 				<url>jdbc:h2:file:${project.build.directory}/schemaForJooq</url>
 				<username>edward</username>
+				<password>edward</password>
 				</configuration>
 				
 			  <executions>
@@ -112,6 +113,7 @@
 						<driver>org.h2.Driver</driver>
 						<url>jdbc:h2:file:${project.build.directory}/schemaForJooq</url>
 						<user>edward</user>
+						<password>edward</password>
 					</jdbc>
 
 					<generator>
