--- a/edward-persistence/pom.xml
+++ b/edward-persistence/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>edward-parent</artifactId>
 		<groupId>pl.joegreen.edward</groupId>
-		<version>0.5</version>
+		<version>0.6-SNAPSHOT</version>
 	</parent>
 
 	<name>edward-persistence</name>
