--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,14 @@
 
 	<groupId>pl.joegreen.edward</groupId>
 	<artifactId>edward-parent</artifactId>
-	<version>0.6</version>
+	<version>0.7-SNAPSHOT</version>
 
 
 	<name>edward-parent</name>
 	<packaging>pom</packaging>
 	<scm>
 		<developerConnection>scm:git:local:.</developerConnection>
-		<tag>0.6</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<repositories>
 		<repository>
