Changing the final name of the executable jar generated by the Spring Boot repackage plugin.

--- a/edward-communication/pom.xml
+++ b/edward-communication/pom.xml
@@ -94,6 +94,7 @@
                         </goals>
                         <configuration>
                             <mainClass>pl.joegreen.edward.communication.Start</mainClass>
+                            <finalName>edward-executable-${project.version}</finalName>
                         </configuration>
                     </execution>
                 </executions>
