--- a/edward-shell-client/pom.xml
+++ b/edward-shell-client/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>edward-parent</artifactId>
 		<groupId>pl.joegreen.edward</groupId>
-		<version>0.7-SNAPSHOT</version>
+		<version>0.7</version>
 	</parent>
 
 	<name>edward-shell-client</name>
